# qlever

./: .clang-format  .codespellrc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING  CompilationInfo.cmake  Dockerfile  Dockerfile-dependencies  GitHash.cmake  GitVersion.cmake  NOTICE  ProjectVersion.cmake  README.md  TensorPerformanceTest_2026-03-27-115307.collapsed  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.internal.index.pos  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.internal.index.pso  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.ttl.settings.json  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.vocabulary.codebooks  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.vocabulary.words.external  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.vocabulary.words.external.offsets  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.vocabulary.words.internal  _staticGlobalTestIndexPrefilterExpressionOnMetadataTest_testBlockFormatForDebugging_0.vocabulary.words.internal.ids  build_tarballs.jl  conanfile.py  conanfile.txt  docker-compose.test.yml  docker-entrypoint.sh  master.Makefile  merge_lcov_branches.py  qlever_toolchain.txt  qlproxy_qgrams.py  qlproxy_server.py  (+10 more)
benchmark/: BasicJoinBenchmark.cpp  Benchmark.cpp  Benchmark.h  BenchmarkConfiguration.cpp  BenchmarkConfiguration.h  BenchmarkExamples.cpp  BenchmarkMain.cpp  BenchmarkMainPrint.cpp  BenchmarkMeasurementContainer.cpp  BenchmarkMeasurementContainer.h  BenchmarkMetadata.h  BenchmarkRecordToJson.cpp  BenchmarkRecordToJson.h  BenchmarkRecordToString.cpp  BenchmarkRecordToString.h  BenchmarkToJson.cpp  BenchmarkToJson.h  BlockSizeLocatedTriplesBenchmark.cpp  CMakeLists.txt  EnsureIntegrationBenchmark.cpp  GroupByHashMapBenchmark.cpp  GroupBySamplingBenchmark.cpp  HybridGroupByBenchmark.cpp  IdKernelBenchmarks.cpp  IdTableCompressedWriterBenchmark.cpp  InsertBatchBenchmark.cpp  JoinAlgorithmBenchmark.cpp  LocatedTriplesInsertScenariosBenchmark.cpp  MainPrintAverageTime.cpp  MainPrintAverageTimeSingleMeasurment.cpp  MainPrintRelativeSpeedup.cpp  MainPrintTimes.cpp  ParallelMergeBenchmark.cpp  SortedIdTableMergeBenchmark.cpp  SortedJoinBenchmark.cpp  SortedLocatedTriplesVectorBenchmark.cpp  UnsortedAndSortedJoinBenchmark.cpp  UnsortedJoinBenchmark.cpp  Usage.md  ZipMergeIteratorBenchmark.cpp
benchmark/infrastructure/: Benchmark.cpp  Benchmark.h  BenchmarkConfiguration.cpp  BenchmarkConfiguration.h  BenchmarkConfigurationOption.cpp  BenchmarkConfigurationOption.h  BenchmarkConfigurationShorthandVisitor.cpp  BenchmarkConfigurationShorthandVisitor.h  BenchmarkMain.cpp  BenchmarkMeasurementContainer.cpp  BenchmarkMeasurementContainer.h  BenchmarkMetadata.h  BenchmarkRecordToString.cpp  BenchmarkRecordToString.h  BenchmarkResultToString.cpp  BenchmarkResultToString.h  BenchmarkToJson.cpp  BenchmarkToJson.h  BenchmarkToString.cpp  BenchmarkToString.h  CopyableUniquePtr.h  CopybaleUniquePtr.h
benchmark/util/: BenchmarkTableCommonCalculations.h  HashMapWithInsertionOrder.h  IdTableHelperFunction.h  JoinHelperFunction.h  MainFunctionHelperFunction.h  ResultTableColumnOperations.h  TransformVector.h
src/engine/: AddCombinedRowToTable.h  AddedPredicatesScan.cpp  AddedPredicatesScan.h  BinaryExport.cpp  BinaryExport.h  Bind.cpp  Bind.h  CMakeLists.txt  CallFixedSize.h  CartesianProductJoin.cpp  CartesianProductJoin.h  CheckUsePatternTrick.cpp  CheckUsePatternTrick.h  Comparators.h  Constants.h  ConstructBatchEvaluator.cpp  ConstructBatchEvaluator.h  ConstructBatchProcessor.cpp  ConstructBatchProcessor.h  ConstructDeduplicationFilter.cpp  ConstructDeduplicationFilter.h  ConstructIdCache.cpp  ConstructIdCache.h  ConstructQueryCache.cpp  ConstructQueryCache.h  ConstructQueryEvaluator.cpp  ConstructQueryEvaluator.h  ConstructRowProcessor.cpp  ConstructRowProcessor.h  ConstructTemplatePreprocessor.cpp  ConstructTemplatePreprocessor.h  ConstructTripleGenerator.cpp  ConstructTripleGenerator.h  ConstructTripleInstantiator.cpp  ConstructTripleInstantiator.h  ConstructTypes.h  CountAvailablePredicates.cpp  CountAvailablePredicates.h  CountConnectedSubgraphs.cpp  CountConnectedSubgraphs.h  (+258 more)
src/extensions/: CMakeLists.txt
src/index/: BlankNodeIriVocabulary.cpp  BlankNodeIriVocabulary.h  CMakeLists.txt  CompressedBlockPrefiltering.cpp  CompressedBlockPrefiltering.h  CompressedExternalIdTableSorterExternTemplates.h  CompressedExternalIdTableSorterInstantiations.cpp  CompressedRelation.cpp  CompressedRelation.h  CompressedRelationHelpersImpl.h  CompressedRelationPermutationWriterImpl.h  CompressedRelationWriterHelpers.h  CompressedString.h  ConstantsIndexBuilding.h  ConstantsIndexCreation.h  CreatePatternsMain.cpp  DeltaTriples.cpp  DocsDB.h  (+140 more)
test/: ANTLR4UtilTests.cpp  AbstractMemoryTest.cpp  AcceptHeaderTest.cpp  AddCombinedRowToTableTest.cpp  AggregateBlocksTest.cpp  AggregateExpressionTest.cpp  AlgorithmTest.cpp  AlignedAllocatorTest.cpp  AllocatorPmrTest.cpp  AllocatorWithLimitTest.cpp  AsioHelpersTest.cpp  AsyncStreamTest.cpp  BPlusTreeTest.cpp  BackgroundStxxlSorterTest.cpp  BasicJoinBenchmark.cpp  BatchedPipelineTest.cpp  BenchmarkConfigurationOptionTest.cpp  BenchmarkConfigurationTest.cpp  BenchmarkMeasurementContainerTest.cpp  BindTest.cpp  BitPackingTest.cpp  BitUtilsTest.cpp  BlankNodeIriVocabularyTest.cpp  BlankNodeManagerTest.cpp  BoundedIntegerTest.cpp  BoundingBoxTest.cpp  BufferedVectorTest.cpp  CMakeLists.txt  CacheAdapterTest.cpp  CacheTest.cpp  CacheableGeneratorTest.cpp  CachingMemoryResourceTest.cpp  CallFixedSizeTest.cpp  CancellationHandleTest.cpp  CheckUsePatternTrickTest.cpp  ChunkedForLoopTest.cpp  CombinedMilestoneVocabularyTest.cpp  CombinedVocabularyTest.cpp  CompactStringVectorTest.cpp  ComparisonWithNanTest.cpp  (+301 more)
(+1583 files in other folders)
